--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "mongoose": "^8.9.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
